<resources>
    <string name="app_name">QuizVerse</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leader_board">LeaderBoard</string>
    <string name="profile">Profile</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="syllabus">Syllabus</string>
    <string name="saved_quizs">Saved Quizs</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share App</string>
    <string name="search_notes">Search Notes</string>
    <string name="java">Java</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="create_a_new_account">Create a new account?</string>
    <string name="signin_with_google">SignIn with Google</string>
    <string name="password">Password</string>

</resources>